modification de l'envoi de message pour envoyer un message en selectionnant les user avec leur email au lieux de leur id
